Fixes padding and spacing around the fixed navbar

--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -91,7 +91,6 @@
 
   }
   &.container {
-    margin: 1rem auto 3rem auto;
     max-width: 1200px;
     @media (max-width: 425px) {
       padding: 1rem;
